--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,7 +22,7 @@ header {
     font-size: 18px;
     font-weight: bold;
     padding: 30px;
-    height: 10vh;
+    height: 10%;
 }
 
 header a {
@@ -32,6 +32,7 @@ header a {
 main {
     width: 100%;
     display: flex;
+    height: 90%;
 }
 
 aside {
@@ -41,7 +42,8 @@ aside {
     padding: 20px;
     background-color: rgb(196, 196, 196);
     gap: 20px;
-    height: 90vh;
+    overflow-y: auto;
+    height: 100%;
 }
 
 aside button {
@@ -117,7 +119,8 @@ button {
 }
 
 #dirs-container,
-#files-container {
+#files-container,
+#imgs-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -125,7 +128,8 @@ button {
 }
 
 .dir-div,
-.file-div {
+.file-div,
+.img-div {
     width: 150px;
     height: 150px;
     display: flex;
@@ -139,7 +143,8 @@ button {
 }
 
 .dir-div img,
-.file-div img {
+.file-div img,
+.img-div img {
     width: 70%;
 }
 
@@ -149,6 +154,10 @@ button {
 
 .file-div {
     border: 3px solid rgb(0, 167, 0);
+}
+
+.img-div {
+    border: 3px solid rgb(204, 32, 152);
 }
 
 dialog {
@@ -229,7 +238,8 @@ input[type="file"] {
 /* -- */
 
 .next-dir-btn,
-.open-editor-btn {
+.open-editor-btn,
+.open-img-btn {
     border: none;
     text-decoration: underline;
     cursor: pointer;
@@ -297,4 +307,50 @@ input[type="file"] {
 
 .saveTxtBtn {
     font-size: 16px;
+}
+
+
+/* ------ */
+
+#panel {
+    background-color: gray;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 20px;
+    width: 0px;
+    transition: width 1s;
+}
+
+#panel>* {
+    display: none;
+    margin-top: 10px;
+}
+
+.one-of-filter:hover {
+    cursor: pointer;
+}
+
+.main-photo-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-photo-container button {
+    padding: 20px;
+    font-size: 20px;
+    background-color: rgb(30, 0, 87);
+    color: white;
+    border: none;
+}
+
+.main-photo-container button:hover {
+    background-color: rgb(44, 0, 202);
+    cursor: pointer;
 }
